changements paths pour les exemples + corrections doc

--- a/documentation/Env/Env_ContentCategory.html
+++ b/documentation/Env/Env_ContentCategory.html
@@ -212,7 +212,7 @@ Les contenus de cette catégorie vont être représentés de la manière suivant
 	</div> 
 	
 	<!-- ========== Info from phpDoc block ========= -->
-<p class="short-description">Function qui charge toutes les catégories.</p>
+<p class="short-description">Fonction qui charge toutes les catégories.</p>
 	<ul class="tags">
 				<li><span class="field">access:</span> public</li>
 			</ul>
