modif page index -> lien vers les parametres

--- a/parametres.html
+++ b/parametres.html
@@ -15,6 +15,7 @@
   <body>
     <div id="CONTAINER">
       <p>Ce document a pour but de présenter les paramètres utilisés lors de l'interaction avec l'API <a href="http://www.envoimoinscher.com">EnvoiMoinsCher.com</a>.</p>
+      <p>Pour plus d'informations sur les paramètres, la description des classes, veuillez-vous référer à <a href="/api/librairie/documentation">la documentation de la librairie</a>, <a href="/api/librairie/parametres.html">les paramètres de la librairie</a> et <a href="#" target="_blank">de l'API</a>.</p>
       <p><b>Les options</b></p>
       <table>
         <thead><tr><td>Nom de l'option</td><td>Nom du paramètre</td><td>Description</td></tr></thead>
@@ -86,7 +87,7 @@
             <td>adresse</td>
             <td>obligatoire</td>
             <td>L'adresse (la rue, l'étage, le numéro de chambre...) de la personne. Vous avez la possibilité d'indiquer au maximum 3 lignes pour tous les transporteurs sauf le TNT. Pour le TNT le nombre des lignes maximal est 2.<br />
-              Pour passer une adresse composée de plusieurs lignes, veuillez utiliser le séparateur |. Pour un logement Y situé à la rue Inconnue on aura donc : "1, rue Inconnue | logement 200".
+              Pour passer une adresse composée de plusieurs lignes, veuillez utiliser le séparateur |. Pour un logement 200 situé à la rue Inconnue on aura donc : "1, rue Inconnue | logement 200".
             </td>
           </tr>
           <tr>
