rajout liens, lien doc api commente

--- a/documentation/li_Env.html
+++ b/documentation/li_Env.html
@@ -39,6 +39,7 @@
 	<dl>
 	  <dt class="folder-title">Classes</dt>
 	    <dd><a href="/api/librairie/index.html" target="_blank">Revenir au quick start</a></dd>
+	    <dd><a href="/api/librairie/parametres.html" target="_blank">Revenir aux paramètres</a></dd>
 	  </dt>
 	</dl>
 </div>
