--- a/parametres.html
+++ b/parametres.html
@@ -15,7 +15,7 @@
   <body>
     <div id="CONTAINER">
       <p>Ce document a pour but de présenter les paramètres utilisés lors de l'interaction avec l'API <a href="http://www.envoimoinscher.com">EnvoiMoinsCher.com</a>.</p>
-      <p>Pour plus d'informations sur les paramètres, la description des classes, veuillez-vous référer à <a href="/api/librairie/documentation">la documentation de la librairie</a>, <a href="/api/librairie/parametres.html">les paramètres de la librairie</a> et <a href="#" target="_blank">de l'API</a>.</p>
+      <p>Pour plus d'informations sur les paramètres, la description des classes, veuillez-vous référer <a href="/api/librairie/documentation">à la documentation de la librairie</a>, <a href="/api/librairie/">au quick start</a> <!-- et <a href="#" target="_blank">de l'API</a>-->.</p>
       <p><b>Les options</b></p>
       <table>
         <thead><tr><td>Nom de l'option</td><td>Nom du paramètre</td><td>Description</td></tr></thead>
